Make the list of ImageStorage objects retrieved from ImageStorageDataProvider.Access.getImages(int) mutable